# trinity_chess

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  Session.vim  TODO.txt  TODO_CHESS_GAME.txt  chess  cmake_install.cmake  compile_commands.json  configuration.json  defs.h  main  main.cpp  test_results.json  workbench.xmi
src/: CMakeLists.txt  bit_utilities.h  game.cpp  main.cpp  move_utils.cpp  player.cpp  players.cpp  project_structure.txt
src/board/: BoardBitboard.h  CMakeLists.txt  bitboard.cpp  board.cpp  board.h  board_fen.cpp  board_fen.h  board_fen_info.h  board_with_info.cpp  castling.cpp  en_passant.cpp  info.cpp  magic_bitboard.cpp  move_validation.cpp  pawn_promotion.cpp  special_move.cpp  special_move_controller.cpp  square.cpp  square.h  squares.cpp
src/board/headers/: BoardBitboard.h  IMove_validation.h  bitboard.h  board.h  board_fen.h  board_fen_info.h  board_with_info.h  castling.h  defs.h  en_passant.h  info.h  magic_bitboard.h  move_validation.h  pawn_promition.h  rook.h  savable.h  special_move.h  special_move_controller.h  square.h  squares.h  utils.h
src/board/pieces/: CMakeLists.txt  king.cpp  king.h  knight.cpp  magic_bitboard.cpp  magic_bitboard.h  pawn.h  piece.h  queen.cpp  sliding_moves.hpp
src/board/special_moves/: CMakeLists.txt  castling.h  en_passant.cpp  en_passant.h  pawn_promotion.cpp  pawn_promotion.h  special_move.h
src/builtin_search_engine/: CMakeLists.txt  main.cpp  uci.cpp  uci.h
src/builtin_search_engine/ipc/: CMakeLists.txt  cu_pipe.cpp  cu_pipe.h  ipc_pipe.cpp  ipc_pipe.h
src/builtin_search_engine/search/: CMakeLists.txt  search.h
src/cli/: CMakeLists.txt  main.cpp
src/cli/board/: CMakeLists.txt  board.cpp  board.h  chess.cpp  chess.h  square.h  squares.cpp  squares.h
src/cli/board_check/: CMakeLists.txt  board.h  board_bitboard.h  board_fen.h  board_fen_info.h  square.cpp  squares.cpp  squares.h
src/cli/components/: ISectionComponent.h  box.h  box_modifier.hpp  const_event_emitter.h  event_emitter.h  fen_fields.hpp  pane.cpp  pane.h  pane_drawings.hpp  section.cpp  section.h  window.cpp  window.h
src/cli/configuration/: CMakeLists.txt  IConfiguration.h  board_configuration.cpp  board_configuration.h  board_info.h  configuration.cpp  configuration.h  default_configuration.cpp  default_configuration.h  file_configuration.hpp  game_configuration.h  input_configuration.h  input_configuration.hpp  players_configuration.cpp  players_configuration.h
src/cli/game/: CMakeLists.txt  game.cpp  game.h  game_typedefs.h
src/cli/input/: CMakeLists.txt  input_component.h  input_components.h  input_types.h
src/cli/menu/: CMakeLists.txt
src/cli/ui/: CMakeLists.txt  view.h
src/cli/ui_components/: ISectionComponent.cpp  box.h  box_modifier.hpp  fen_component_parts.hpp  pane.cpp  pane.h  pane_drawings.hpp  section.cpp  section.h  window.cpp  window.h
src/cli/utils/: CMakeLists.txt  bit_utilities.h  defs.h  move.hpp  player_info.hpp  regex_utils.h  string_utils.h  utilities.h
src/common/: CMakeLists.txt  common.cpp
src/common/headers/: common.h
src/configuration/: CMakeLists.txt  configuration.cpp  input_configuration.cpp  input_configuration.h  players_configuration.cpp  players_configuration.h
src/configuration/headers/: configuration.h  input_configuration.h  players_configuration.h
src/controller/: CMakeLists.txt  ui_board_controller.cpp  ui_board_decorator.cpp  ui_board_info_controller.cpp  uicontroller.cpp
src/controller/headers/: ui_board.h  ui_board_controller.h  ui_board_decorator.h  ui_board_info_controller.h  uicontroller.h
src/display/: CMakeLists.txt  boxStruct.h  drawings.cpp  drawings.hpp  message_state.cpp
src/display/headers/: Idisplay.h  gui_controller.h  pane.h
src/game/: CMakeLists.txt  board_input_handler.cpp  game.cpp  game.h  game_options.cpp  game_turn_observable.cpp  game_turn_observer.h  menu.cpp  move_utils.cpp  options.cpp
src/game/headers/: Ioptions.h  bit_utilities.h  board_input_handler.h  board_input_hanlder.h  game.h  game_options.h  game_turn.h  game_turn_observable.h  game_turn_observer.h  menu.h  menu_input_handler.h  move.h  move.hpp  move_utils.h  options.h  regex.h  string_utils.h
src/game/players/: CMakeLists.txt  ai_player.h  human_player.h  player_position.h  players.h  players_turn_controller.cpp  players_turn_controller.h
src/general/: bitUtilities.hpp  defs.h  game.cpp  messages.cpp  utils.h
src/general/pieces/: piece.cpp  (+1 more)
src/graphics/: CMakeLists.txt  ISectionComponent.cpp  Idisplay.cpp  board_drawing.cpp  gui_controller.cpp  message_state.cpp  messages.cpp  pane.cpp  pieces_drawings.cpp  section.cpp  square_drawing.cpp  uicontroller.cpp  view.cpp  window.cpp
src/headers/: Ioptions.h  game.h  move.h  move_utils.h  options.h  player.h  players.h  players_selections.h
src/input/: CMakeLists.txt  console_input.cpp  input_event.cpp  input_type.cpp  key_reader.cpp  keyboard_base.cpp  keyboard_input.cpp  keyboard_input_player.cpp  text_base.cpp  text_input.cpp  text_input_player.cpp
src/ipc/: CMakeLists.txt  cu_pipe.cpp  ipc_pipe.cpp
src/logic/: AiPlayer.cpp  AiPlayer.h  bitboard.cpp  bitboard.h  board.cpp  board.h  magic_bitboard.cpp  magic_bitboard.h  move.h  movement.cpp  movement.h  player.cpp  player.h
src/model/: CMakeLists.txt  board_info.cpp  game_info.cpp  player_info.cpp
src/piece/: CMakeLists.txt  bishop.cpp  king.cpp  knight.cpp  magic_bitboard.cpp  pawn.cpp  piece.cpp  pieces.cpp  pieces_drawings.cpp  queen.cpp  rook.cpp
src/player/: CMakeLists.txt  ai_player.cpp  console_input.cpp  human_player.cpp  keyboard_input.cpp  player.cpp  players.cpp  players_turn_controller.cpp
src/search/: CMakeLists.txt  main.cpp  search.cpp  search.h  uci.cpp  uci.h
src/ui/: CMakeLists.txt  view.cpp  view.h
src/utils/: move.hpp  player_info.h  regex.h  string_utils.h  utils.h
src/view/: CMakeLists.txt  board_view.cpp  info_pane.cpp  info_view.cpp  menu_view.cpp  view.cpp
tests/: CMakeLists.txt  Chess_tests[1]_include.cmake  another_test.cpp  board_window_test.cpp  g_test.cpp  gtest.cpp  pane_drawing_test.cpp
(+684 files in other folders)
